--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "seoulmate",
+  "name": "seoulight",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,19 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.39.0",
+    "@modelcontextprotocol/sdk": "^1.8.0",
     "@radix-ui/react-slot": "^1.1.2",
+    "anthropic-ai": "^0.0.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "lucide-react": "^0.487.0",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.55.0",
     "tailwind-merge": "^3.1.0",
-    "tailwindcss-animate": "^1.0.7",
-    "@anthropic-ai/sdk": "^0.39.0",
-    "@modelcontextprotocol/sdk": "^1.8.0",
-    "anthropic-ai": "^0.0.10",
-    "dotenv": "^16.4.7"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -31,6 +32,7 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
+    "eslint-config-prettier": "^10.1.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
