--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,11 @@
         "next/core-web-vitals",
         "prettier"
     ],
+    "plugins": [
+        "prettier"
+    ],
     "rules": {
+        "prettier/prettier": "error",
         "@typescript-eslint/no-explicit-any": "off",
         "@typescript-eslint/no-empty-object-type": "off",
         "@typescript-eslint/ban-ts-comment": "off",
