--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,9 @@
 {
-    "tabWidth": 4,
-    "printWidth": 120,
-    "semi": true,
-    "singleQuote": true,
-    "trailingComma": "none",
-    "plugins": ["prettier-plugin-tailwindcss"],
-    "pluginSearchDirs": false
+  "tabWidth": 2,
+  "printWidth": 80,
+  "semi": true,
+  "singleQuote": false,
+  "trailingComma": "none",
+  "plugins": ["prettier-plugin-tailwindcss"],
+  "pluginSearchDirs": false
 }
