--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
+    "immer": "^10.1.1",
     "lucide-react": "^0.487.0",
     "next": "15.1.6",
     "react": "^19.0.0",
@@ -26,7 +27,7 @@
     "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
-    "zustand": "^5.0.3"
+    "zustand": "4.4.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
