--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
+    "framer-motion": "^12.6.3",
     "immer": "^10.1.1",
     "lucide-react": "^0.487.0",
     "next": "15.1.6",
