--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.39.0",
+    "@google/generative-ai": "^0.24.0",
     "@modelcontextprotocol/sdk": "^1.8.0",
     "@radix-ui/react-slot": "^1.1.2",
     "anthropic-ai": "^0.0.10",
