--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@google/generative-ai": "^0.24.0",
     "@modelcontextprotocol/sdk": "^1.8.0",
     "@radix-ui/react-slot": "^1.1.2",
+    "@wormhole-foundation/sdk": "^1.14.1",
+    "@wormhole-foundation/wormhole-connect": "^2.3.0",
     "anthropic-ai": "^0.0.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -29,6 +31,7 @@
     "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
+    "tsx": "^4.19.3",
     "zustand": "4.4.7"
   },
   "devDependencies": {
