--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# VSCODE
+.vscode
 # dependencies
 /node_modules
 /.pnp
@@ -41,4 +43,3 @@ yarn-error.log*
 next-env.d.ts
 
 /hyperagents
-/backend
