--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "hyperagents": "file:hyperagents"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
